# aistartupclass

./: .gitignore  manage.py  pyproject.toml  sync.sh
ai_app/: views.py
aistartupclass/: asgi.py  settings.py  urls.py  wsgi.py
image_generator/: forms.py  models.py  urls.py  views.py
image_generator/migrations/: 0001_initial.py
image_generator/templates/image_generator/: error.html  gallery.html  home.html
