[project]
name = "aistartupclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "google-cloud-aiplatform>=1.93.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "vertexai>=1.43.0",
]
